# uiai2018

./: Game.py  README.md  Strategy.py  game.com  kill.sh  pids  run.sh
client/: CMakeLists.txt  game.cpp  strategy.cpp
enemy/: Game.py  Strategy.py
enemy/idk/: Game.py  Strategy.py  client.py
enemy/mamad/client/: Game.py  Stra2.py  Strategy.py  client.py  testing.py
log/: out
server/: Game.com
server/UIAI2018Server_Linux_x86_64_3.0_Data/: globalgamemanagers  level0  level1
server/UIAIServer2018_1.1_Data/: globalgamemanagers  globalgamemanagers.assets  level0  level1  sharedassets0.assets  sharedassets0.assets.resS  sharedassets1.assets
